--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -2,132 +2,240 @@ footer {
   background: $brand-blue;
   padding-top: 4.9rem;
 
-  .container {
-    .top {
-      @include flex(row, center, space-between);
-      border-bottom: 1px solid hsla(199, 98%, 64%, 0.2);
-      padding-bottom: 4.8rem;
-      margin-bottom: 5.7rem;
+  .top {
+    @include flex(row, center, space-between);
+    border-bottom: 1px solid hsla(199, 98%, 64%, 0.2);
+    padding-bottom: 4.8rem;
+    margin-bottom: 5.7rem;
 
-      .share {
+    .share {
+      display: flex;
+      align-items: center;
+
+      span {
+        font-size: 1.4rem;
+        line-height: 125%;
+        color: $white;
+        opacity: 0.7;
+      }
+
+      ul {
         display: flex;
         align-items: center;
+        margin-left: 3rem;
 
-        span {
-          font-size: 1.4rem;
-          line-height: 125%;
+        li {
+          &:not(:first-child) {
+            margin-left: 3rem;
+          }
+        }
+      }
+    }
+  }
+
+  .main {
+    @include flex(row, flex-start, space-between);
+    border-bottom: 1px solid hsla(199, 98%, 64%, 0.2);
+    padding-bottom: 6.2rem;
+    margin-bottom: 3.9rem;
+
+    nav {
+      @include flex(row, flex-start, space-between);
+      width: 100%;
+      max-width: 86rem;
+
+      .item {
+        strong {
+          font-family: "Poppins", sans-serif;
+          font-weight: 600;
+          font-size: 1.6rem;
+          line-height: 1.6rem;
           color: $white;
-          opacity: 0.7;
+          display: inline-block;
+          margin-bottom: 2.5rem;
         }
 
         ul {
-          display: flex;
-          align-items: center;
-          margin-left: 3rem;
-
           li {
-            &:not(:first-child) {
-              margin-left: 3rem;
+            &:not(:last-child) {
+              margin-bottom: 2.9rem;
+            }
+
+            a {
+              font-size: 1.4rem;
+              line-height: 1.7rem;
+              color: $white;
+              opacity: 0.7;
             }
           }
         }
       }
     }
 
+    .btns {
+      width: 100%;
+      max-width: 28rem;
+
+      button {
+        background: rgba(0, 164, 240, 0.23);
+        border-radius: 6px;
+        width: 100%;
+        height: 7.6rem;
+        display: flex;
+        align-items: center;
+        padding-left: 2.5rem;
+
+        &:not(:last-child) {
+          margin-bottom: 2.4rem;
+        }
+
+        .info {
+          margin-left: 2.4rem;
+          font-size: 1.4rem;
+          line-height: 150%;
+          color: $white;
+
+          strong {
+            display: block;
+            text-align: left;
+            font-weight: bold;
+          }
+
+          span {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+
+  .message {
+    display: flex;
+    align-items: flex-start;
+    border-bottom: 4px solid $brand-yellow;
+    padding-bottom: 3.4rem;
+
+    .icon {
+      font-size: 1.8rem;
+    }
+
+    p {
+      width: 100%;
+      max-width: 66rem;
+      margin-left: 2.5rem;
+      font-size: 1.4rem;
+      line-height: 150%;
+      color: $white;
+      opacity: 0.8;
+    }
+  }
+
+  @include responsive(1050px) {
     .main {
-      @include flex(row, flex-start, space-between);
-      border-bottom: 1px solid hsla(199, 98%, 64%, 0.2);
-      padding-bottom: 6.2rem;
-      margin-bottom: 3.9rem;
+      nav {
+        max-width: 76rem;
+      }
+    }
+  }
+
+  @include responsive(991px) {
+    .main {
+      width: 100%;
+      position: relative;
+      flex-direction: column;
+      align-items: flex-start;
+      padding-bottom: 3.6rem;
 
       nav {
-        @include flex(row, flex-start, space-between);
         width: 100%;
-        max-width: 86rem;
+        flex-wrap: wrap;
+        justify-content: flex-start;
 
         .item {
-          strong {
-            font-family: "Poppins", sans-serif;
-            font-weight: 600;
-            font-size: 1.6rem;
-            line-height: 1.6rem;
-            color: $white;
-            display: inline-block;
-            margin-bottom: 2.5rem;
-          }
-
-          ul {
-            li {
-              &:not(:last-child) {
-                margin-bottom: 2.9rem;
-              }
-
-              a {
-                font-size: 1.4rem;
-                line-height: 1.7rem;
-                color: $white;
-                opacity: 0.7;
-              }
-            }
-          }
+          width: 33%;
+          margin-bottom: 5rem;
         }
       }
 
       .btns {
-        width: 100%;
-        max-width: 280px;
+        position: absolute;
+        bottom: 14rem;
+        right: 0;
+      }
+    }
+
+    .message {
+      flex-direction: column;
+      align-items: center;
+
+      p {
+        margin-left: 0;
+        text-align: center;
+        margin-top: 1rem;
+      }
+    }
+  }
+
+  @include responsive(600px) {
+    .main {
+      margin-bottom: 3rem;
+
+      .btns {
+        max-width: 25rem;
 
         button {
-          background: rgba(0, 164, 240, 0.23);
-          border-radius: 6px;
-          width: 28rem;
-          height: 7.6rem;
-          display: flex;
-          align-items: center;
-          padding-left: 2.5rem;
-
-          &:not(:last-child) {
-            margin-bottom: 2.4rem;
+          img {
+            display: none;
           }
 
           .info {
-            margin-left: 2.4rem;
-            font-size: 1.4rem;
-            line-height: 150%;
-            color: $white;
-
-            strong {
-              display: block;
-              text-align: left;
-              font-weight: bold;
-            }
-
-            span {
-              display: block;
-            }
+            margin-left: 0;
           }
         }
       }
     }
+  }
 
-    .mensagem {
-      display: flex;
-      align-items: flex-start;
-      border-bottom: 4px solid $brand-yellow;
-      padding-bottom: 3.4rem;
+  @include responsive(480px) {
+    .top {
+      flex-direction: column;
+      padding-bottom: 4.3rem;
+      margin-bottom: 5.2rem;
 
-      .icon {
-        font-size: 1.8rem;
+      .share {
+        flex-direction: column;
+        margin-top: 3.2rem;
+
+        ul {
+          margin-top: 20px;
+          margin-left: 0;
+        }
+      }
+    }
+    .main {
+      nav {
+        .item {
+          width: 50%;
+          margin-bottom: 5.3rem;
+        }
       }
 
-      p {
-        width: 100%;
-        max-width: 66rem;
-        margin-left: 2.5rem;
-        font-size: 1.4rem;
-        line-height: 150%;
-        color: $white;
-        opacity: 0.8;
+      .btns {
+        bottom: 0;
+        position: relative;
+        max-width: 100%;
+
+        button {
+          padding-left: 0;
+          justify-content: center;
+
+          .info {
+            strong,
+            span {
+              text-align: center;
+            }
+          }
+        }
       }
     }
   }
