--- a/scss/styles.css
+++ b/scss/styles.css
@@ -298,7 +298,7 @@ footer {
   padding-top: 4.9rem;
 }
 
-footer .container .top {
+footer .top {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -317,7 +317,7 @@ footer .container .top {
   margin-bottom: 5.7rem;
 }
 
-footer .container .top .share {
+footer .top .share {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -326,14 +326,14 @@ footer .container .top .share {
           align-items: center;
 }
 
-footer .container .top .share span {
+footer .top .share span {
   font-size: 1.4rem;
   line-height: 125%;
   color: #ffffff;
   opacity: 0.7;
 }
 
-footer .container .top .share ul {
+footer .top .share ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -343,11 +343,11 @@ footer .container .top .share ul {
   margin-left: 3rem;
 }
 
-footer .container .top .share ul li:not(:first-child) {
+footer .top .share ul li:not(:first-child) {
   margin-left: 3rem;
 }
 
-footer .container .main {
+footer .main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -366,7 +366,7 @@ footer .container .main {
   margin-bottom: 3.9rem;
 }
 
-footer .container .main nav {
+footer .main nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -384,7 +384,7 @@ footer .container .main nav {
   max-width: 86rem;
 }
 
-footer .container .main nav .item strong {
+footer .main nav .item strong {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 1.6rem;
@@ -394,26 +394,26 @@ footer .container .main nav .item strong {
   margin-bottom: 2.5rem;
 }
 
-footer .container .main nav .item ul li:not(:last-child) {
+footer .main nav .item ul li:not(:last-child) {
   margin-bottom: 2.9rem;
 }
 
-footer .container .main nav .item ul li a {
+footer .main nav .item ul li a {
   font-size: 1.4rem;
   line-height: 1.7rem;
   color: #ffffff;
   opacity: 0.7;
 }
 
-footer .container .main .btns {
+footer .main .btns {
   width: 100%;
-  max-width: 280px;
+  max-width: 28rem;
 }
 
-footer .container .main .btns button {
+footer .main .btns button {
   background: rgba(0, 164, 240, 0.23);
   border-radius: 6px;
-  width: 28rem;
+  width: 100%;
   height: 7.6rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -424,28 +424,28 @@ footer .container .main .btns button {
   padding-left: 2.5rem;
 }
 
-footer .container .main .btns button:not(:last-child) {
+footer .main .btns button:not(:last-child) {
   margin-bottom: 2.4rem;
 }
 
-footer .container .main .btns button .info {
+footer .main .btns button .info {
   margin-left: 2.4rem;
   font-size: 1.4rem;
   line-height: 150%;
   color: #ffffff;
 }
 
-footer .container .main .btns button .info strong {
+footer .main .btns button .info strong {
   display: block;
   text-align: left;
   font-weight: bold;
 }
 
-footer .container .main .btns button .info span {
+footer .main .btns button .info span {
   display: block;
 }
 
-footer .container .mensagem {
+footer .message {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -456,11 +456,11 @@ footer .container .mensagem {
   padding-bottom: 3.4rem;
 }
 
-footer .container .mensagem .icon {
+footer .message .icon {
   font-size: 1.8rem;
 }
 
-footer .container .mensagem p {
+footer .message p {
   width: 100%;
   max-width: 66rem;
   margin-left: 2.5rem;
@@ -468,6 +468,114 @@ footer .container .mensagem p {
   line-height: 150%;
   color: #ffffff;
   opacity: 0.8;
+}
+
+@media (max-width: 1050px) {
+  footer .main nav {
+    max-width: 76rem;
+  }
+}
+
+@media (max-width: 991px) {
+  footer .main {
+    width: 100%;
+    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding-bottom: 3.6rem;
+  }
+  footer .main nav {
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  footer .main nav .item {
+    width: 33%;
+    margin-bottom: 5rem;
+  }
+  footer .main .btns {
+    position: absolute;
+    bottom: 14rem;
+    right: 0;
+  }
+  footer .message {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  footer .message p {
+    margin-left: 0;
+    text-align: center;
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 600px) {
+  footer .main {
+    margin-bottom: 3rem;
+  }
+  footer .main .btns {
+    max-width: 25rem;
+  }
+  footer .main .btns button img {
+    display: none;
+  }
+  footer .main .btns button .info {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  footer .top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-bottom: 4.3rem;
+    margin-bottom: 5.2rem;
+  }
+  footer .top .share {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 3.2rem;
+  }
+  footer .top .share ul {
+    margin-top: 20px;
+    margin-left: 0;
+  }
+  footer .main nav .item {
+    width: 50%;
+    margin-bottom: 5.3rem;
+  }
+  footer .main .btns {
+    bottom: 0;
+    position: relative;
+    max-width: 100%;
+  }
+  footer .main .btns button {
+    padding-left: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  footer .main .btns button .info strong,
+  footer .main .btns button .info span {
+    text-align: center;
+  }
 }
 
 .s-hero {
